<resources>
    <string name="app_name">I\'M HERE</string>
    <string name="action_settings">Settings</string>
    <string name="action_event_details">View Event</string>
    <string name="action_delete_marker">Delete Marker</string>
    <string name="action_add_event">Add Event</string>
    <string name="event_title_hint">Enter a title for the event.</string>
    <string name="choose_contact_text">Choose contact</string>
    <string name="choose_radius_text">Set radius:</string>
    <string name="event_title_heading">Title</string>
    <string name="event_message_hint">Enter your message here...</string>
    <string name="event_message_title">Message</string>
    <string name="event_email_to">To</string>
    <string name="event_email_to_hint">Email address</string>
    <string name="event_email_sub">Subject</string>
    <string name="event_email_sub_hint">Email subject</string>
    <string name="event_email_body">Body</string>
    <string name="event_email_body_hint">Enter email content here...</string>
    <string name="event_delete_on_complete">Delete on complete</string>
    <string name="event_create_event">Create event</string>
    <string name="event_settings_label">Event Settings</string>
    <string name="event_created_toast">Event created</string>
    <string name="event_empty_fields_toast">Pleas fill in all fields!</string>
    <string name="dialog_emailpassword_title">Enter Your Gmail Login Details</string>
    <string name="dialog_email_heading">Email</string>
    <string name="dialog_password_heading">Password</string>
    <string name="dialog_create_button">Create</string>
    <string name="dialog_email_hint">Email address</string>
    <string name="dialog_password_hint">Password</string>
    <string name="email_send_error">Email did not send!</string>
    <string name="email_important_message">IMPORTANT!    Please insure you have the \"Allow less
        secure apps\" setting turned on for your Google account. To check go to myaccount.google.com/security.
        Your email will not send if this setting is off.</string>
    <string name="map_title">Choose A Location</string>
    <string name="event_type_title">Choose An Event</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="home_create_event_button">Create Event</string>
    <string name="home_view_events_button">View Events</string>
    <string name="event_list_view_map">View Map</string>
    <string name="active_events">Active Events</string>

    <string name="hello_world">Hello world!</string>
</resources>
