<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_email_heading"/>

    <EditText android:id="@+id/user_email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:hint="@string/dialog_email_hint"
              android:padding="6dp"
              android:background="@drawable/text_area_background"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_password_heading"/>

    <EditText android:id="@+id/user_pass"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:hint="@string/dialog_password_hint"
              android:padding="6dp"
              android:background="@drawable/text_area_background"
              android:inputType="textPassword"
        />

    <Button
        android:id="@+id/dialog_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="10dp"
        android:text="@string/dialog_create_button"/>

</LinearLayout>