<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingBottom="20dp">

        <TextView
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_important_message"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_title_heading"/>

        <EditText android:id="@+id/event_title_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:hint="@string/event_title_hint"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_radius_text"/>

            <TextView
                android:id="@+id/seekbar_progress_text_view"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>


        <SeekBar
            android:id="@+id/alarm_radius_seekbar"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_email_to"/>

        <EditText android:id="@+id/event_email_to"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:hint="@string/event_email_to_hint"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_email_sub"/>

        <EditText android:id="@+id/event_email_subject"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:hint="@string/event_email_sub_hint"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_email_body"/>

        <EditText android:id="@+id/event_text_message"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textMultiLine"
                  android:lines="8"
                  android:gravity="top|left"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:padding="4dp"
                  android:hint="@string/event_email_body_hint"
                  android:background="@drawable/text_area_background"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_delete_on_complete"/>

            <CheckBox
                android:id="@+id/event_delete_on_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:checked="true"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>